<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CSOCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu_utama">CSOCare</string>
    <string name="footer_web">www.csoc.or.id</string>
    <string name="btn_info">INFO</string>
    <string name="btn_event">EVENT</string>
    <string name="btn_bengkel">BENGKEL</string>
	<string name="btn_emergency">EMERGENCY</string>
	<string name="btn_adart">ADART CSOC</string>
	<string name="btn_pengurus">Pengurus CSOC</string>
	<string name="btn_organisasi">Sejarah Organisasi</string>
	<string name="btn_founder">Founder CSOC</string>
	<string name="btn_chapter">Chapter CSOC</string>
	<string name="btn_tampilevent">Tampilkan Event</string>
	<string name="lihat_event">Lihat Event</string>
	<string name="tambah_event">Tambahkan Event Baru</string>
	<color name="black">#000000</color>
	<color name="trans">#00000000</color>
	<string name="btn_createevent">Bikin Event</string>
	<string name="disp_event">EVENT</string>
	<string name="disp_tgl">Tanggal Event</string>
	<string name="disp_desc">Keterangan Event</string>
	<string name="simpan_event">Simpan</string>
	<string name="hapus_event">Hapus</string>
	<string name="evt_ttl">Nam Event</string>
	<string name="evt_tgl">Tanggal</string>
	<string name="evt_desc">Deskripsi Event</string>
	<string name="evt_OK">OK</string>
	<string name="btn_member">Member CSOC</string>
	<string name="telp_bengkel">Telp</string>
	<string name="txt_judulbengkel">Detail Bengkel CSOC</string>
	<string name="alamat_bengkel">Alamat Bengkel</string>
	<string name="notelp_bengkel">No Telp</string>
	<string name="detail_event">Detail Event</string>
	<string name="tgl_event">20121221</string>
	<string name="lokasi_event">Lokasi Event</string>
	<string name="btn_map">Tampilkan di Peta</string>
	<string name="btn_ad">Anggaran Dasar</string>
	<string name="btn_art">Anggaran Rumah Tangga</string>
	<string name="btn_harian">Pelaksana Harian</string>
	<string name="btn_penasihat">Dewan Penasihat</string>
	<string name="txt_profil">"Profil member akan tersedia di versi berikutnya setelah aplikasi ini dieveluasi oleh Pengurus. Profil member disini hanya sebuah text contoh deskripsi member, dari profil singkat dll. Mungkin juga, profil member akan ditampilkan khusus untuk CSOCare Pro Version. "</string>
	<string name="hint_member">Cari member</string>
	<string name="search_penting">Masukkan area atau nama instansi</string>
	<string name="blank_text"></string>
	<string name="txt_mobil">Jenis Mobil</string>
	<string name="txt_koordinat">Koordinat Bengkel</string>
	<string name="txt_spalsh">Official Mobile Aplication</string>
	<string name="txt_splash2">\"Developer aplikasi itu seperti menulis puisi\"</string>
	<string name="txt_login">CSOCare Login</string>
	<string name="btn_login">Login</string>
	<string name="txt_username">Username</string>
	<string name="hint_login">username</string>
	<string name="hint_password">password</string>
	<string name="txt_password">Password</string>
	<string name="txt_error">Error/Success</string>
	<string name="check_ingat">Ingat username dan sandi</string>
	<string name="member_nama">Nama</string>
	<string name="member_nopung">Nopung</string>
	<string name="member_phone">Phone</string>
	<string name="member_email">Email</string>
	<string name="member_mobil">Jenis Kend</string>
	<string name="member_nopol">Nopol Kend</string>
	<string name="titik_dua">:</string>
	<string name="telp_rumah">Telf Rumah</string>
	<string name="telp_kantor">Telf Kantor</string>
</resources>