<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/btn_adart"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnAD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/btn_ad"
        android:textColor="#FFFFFF"
        android:background="@drawable/button" />

    <Button
        android:id="@+id/btnART"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/btn_art"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"  />

</LinearLayout>
