<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_paper" >

    <TextView
        android:id="@+id/nopungMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/namaMember"
        android:layout_below="@+id/namaMember"
        android:text="Nopung"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ponsel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nopungMember"
        android:layout_below="@+id/nopungMember"
        android:autoLink="phone"
        android:clickable="true"
        android:text="0811254XXX"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ponsel"
        android:layout_below="@+id/ponsel"
        android:text="Email"
        android:textColor="@color/black"
        android:clickable="true"
        android:autoLink="email" />

    <TextView
        android:id="@+id/mobil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:text="Jenis Mobil"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/nopol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobil"
        android:layout_below="@+id/mobil"
        android:text="Nopol Member"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_centerVertical="true"
        android:text="@string/member_nama"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/member_nopung"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:text="@string/member_phone"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:text="@string/member_email"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:text="@string/member_mobil"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:text="@string/member_nopol"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="100dp"
        android:layout_toLeftOf="@+id/namaMember"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_toLeftOf="@+id/namaMember"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_toLeftOf="@+id/namaMember"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_toLeftOf="@+id/namaMember"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView05"
        android:layout_alignBottom="@+id/TextView05"
        android:layout_toLeftOf="@+id/namaMember"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView11"
        android:layout_below="@+id/TextView11"
        android:text="@string/telp_kantor"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView12"
        android:layout_alignLeft="@+id/TextView10"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/telpKantor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView14"
        android:layout_alignBottom="@+id/TextView14"
        android:layout_alignLeft="@+id/telpRumah"
        android:text="021xxx"
        android:textColor="@color/black"
        android:autoLink="phone" />

    <TextView
        android:id="@+id/TextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_below="@+id/TextView05"
        android:text="@string/telp_rumah"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/telpRumah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nopol"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/TextView13"
        android:autoLink="phone"
        android:text="021xxx"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView13"
        android:layout_below="@+id/TextView13"
        android:text="@string/titik_dua"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toRightOf="@+id/TextView04"
        android:text="TextView"
        android:textColor="@color/trans" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/no_photo" />

    <TextView
        android:id="@+id/lokasiMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:text="TextView"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/namaMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/url"
        android:text="Nama Member"
        android:textColor="@color/black"
        android:textSize="15sp" />

    


</RelativeLayout>
